Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104925

[REG 6.4.0-beta1 -> 6.4.0-beta2] Qt no longer builds with -no-feature-highdpiscaling

XMLWordPrintable

    • c2bcba0d3c (qt/qtbase/dev) c2bcba0d3c (qt/tqtc-qtbase/dev) b7cfd0990e (qt/qtbase/6.4) b7cfd0990e (qt/tqtc-qtbase/6.4)

      Build fails with the following error:

      /usr/src/Libraries/qt_6_4_0/qtbase/src/gui/painting/qbackingstore.cpp: In member function 'void QBackingStore::beginPaint(const QRegion&)':
      /usr/src/Libraries/qt_6_4_0/qtbase/src/gui/painting/qbackingstore.cpp:125:48: error: 'scale' is not a member of 'QHighDpi'
        125 |     platformBackingStore->beginPaint(QHighDpi::scale(region, d_ptr->deviceIndependentToNativeFactor()));
            |                                                ^~~~~
      /usr/src/Libraries/qt_6_4_0/qtbase/src/gui/painting/qbackingstore.cpp: In member function 'void QBackingStore::flush(const QRegion&, QWindow*, const QPoint&)':
      /usr/src/Libraries/qt_6_4_0/qtbase/src/gui/painting/qbackingstore.cpp:211:38: error: 'scale' is not a member of 'QHighDpi'
        211 |     QRegion nativeRegion = QHighDpi::scale(region, toNativeFactor);
            |                                      ^~~~~
      /usr/src/Libraries/qt_6_4_0/qtbase/src/gui/painting/qbackingstore.cpp:214:34: error: 'scale' is not a member of 'QHighDpi'
        214 |         nativeOffset = QHighDpi::scale(offset, toNativeFactor);
            |                                  ^~~~~
      /usr/src/Libraries/qt_6_4_0/qtbase/src/gui/painting/qbackingstore.cpp:217:42: error: 'scale' is not a member of 'QHighDpi'
        217 |         QPoint nativeTopLeft = QHighDpi::scale(topLeft, toNativeFactor);
            |                                          ^~~~~
      /usr/src/Libraries/qt_6_4_0/qtbase/src/gui/painting/qbackingstore.cpp: In member function 'void QBackingStore::resize(const QSize&)':
      /usr/src/Libraries/qt_6_4_0/qtbase/src/gui/painting/qbackingstore.cpp:233:32: error: 'scale' is not a member of 'QHighDpi'
        233 |     handle()->resize(QHighDpi::scale(size, d_ptr->deviceIndependentToNativeFactor()), d_ptr->staticContents);
            |                                ^~~~~
      /usr/src/Libraries/qt_6_4_0/qtbase/src/gui/painting/qbackingstore.cpp: In member function 'bool QBackingStore::scroll(const QRegion&, int, int)':
      /usr/src/Libraries/qt_6_4_0/qtbase/src/gui/painting/qbackingstore.cpp:256:38: error: 'scale' is not a member of 'QHighDpi'
        256 |     const qreal nativeDx = QHighDpi::scale(qreal(dx), toNativeFactor);
            |                                      ^~~~~
      /usr/src/Libraries/qt_6_4_0/qtbase/src/gui/painting/qbackingstore.cpp:257:38: error: 'scale' is not a member of 'QHighDpi'
        257 |     const qreal nativeDy = QHighDpi::scale(qreal(dy), toNativeFactor);
            |                                      ^~~~~
      /usr/src/Libraries/qt_6_4_0/qtbase/src/gui/painting/qbackingstore.cpp:261:39: error: 'scale' is not a member of 'QHighDpi'
        261 |     return handle()->scroll(QHighDpi::scale(area, toNativeFactor), nativeDx, nativeDy);
            |                                       ^~~~~
      
      

        For Gerrit Dashboard: QTBUG-104925
        # Subject Branch Project Status CR V

            sorvig Morten Sørvig
            ilya-fedin Ilya Fedin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes