Fix build without highdpiscaling feature

Fixes: QTBUG-104925
Change-Id: Ieb5dd2194c54a61733c427c8a0ddf7576147d6ea
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit c2bcba0d3cf550ede0488b40b8a5f81be817a65c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>